[tool.poetry]
name = "repl_python3_Billing-with-Python"
version = "0.1.0"
description = ""
authors = ["sahil30123 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
openpyxl = "^3.0.7"
pyfiglet = "^0.8.post1"
tabulate = "^0.8.9"
tqdm = "^4.61.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
